--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -16,7 +16,7 @@ server {
   ssl_certificate /var/www/dephell.org/ssl/domain.chain.pem;
   ssl_certificate_key /var/www/dephell.org/ssl/domain.privkey.pem;
 
-  root /var/www/dephell.org/project/public/;
+  root /var/www/dephell.org/project/;
 
   location / {
     expires 1d;
