--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -36,6 +36,11 @@ server {
     return 403;
   }
 
+  location /install/ {
+    alias /dephell/dephell/master/install.py;
+    proxy_pass https://raw.githubusercontent.com;
+  }
+
   # Errors
   include /var/www/error.life4web.ru/configs/nginx-include.conf;
 }
