--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -37,8 +37,7 @@ server {
   }
 
   location /install/ {
-    alias /dephell/dephell/master/install.py;
-    proxy_pass https://raw.githubusercontent.com;
+    proxy_pass https://raw.githubusercontent.com/dephell/dephell/master/install.py;
   }
 
   # Errors
