--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -40,6 +40,19 @@ server {
     proxy_pass https://raw.githubusercontent.com/dephell/dephell/master/install.py;
   }
 
+  location /docs/ {
+    alias /;
+    proxy_pass https://dephell.readthedocs.io/;
+    # proxy_pass https://httpbin.org;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Scheme $scheme;
+    proxy_set_header X-RTD-SLUG dephell;
+    proxy_connect_timeout 10s;
+    proxy_read_timeout 20s;
+  }
+
   # Errors
   include /var/www/error.life4web.ru/configs/nginx-include.conf;
 }
